--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
    <artifactId>tomcat7-maven-plugin</artifactId>
    <version>2.2</version>
    <configuration> 
-      	 <url>http://54.211.10.63/manager/text</url>
+      	 <url>http://18.204.219.243:8080//manager/text</url>
       	 <server>TomcatServer</server>
       	 <path>/sample-webapp-new</path>
    </configuration>
