--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,8 @@
    <version>2.2</version>
    <configuration> 
       	 <url>http://18.204.219.243:8080//manager/text</url>
+      <username>tomcat1</username>
+     <password>tomcat1/password> 
       	 <server>TomcatServer</server>
       	 <path>/sample-webapp-new</path>
    </configuration>
