--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
    <artifactId>tomcat7-maven-plugin</artifactId>
    <version>2.2</version>
    <configuration> 
-      	 <url>http://18.204.219.243:8080//manager/text</url>
+      	 <url>http://3.94.163.53:8080/manager/text</url>
       <username>tomcat1</username>
      <password>tomcat1</password> 
       	 <server>TomcatServer</server>
